--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,12 @@ dependencies {
     testImplementation 'org.spockframework:spock-core:2.1-groovy-3.0'
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11)
+    }
+}
+
 test {
     useJUnitPlatform()
 }
