--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation 'org.kohsuke:github-api:1.301'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
     testImplementation 'org.spockframework:spock-core:2.1-groovy-3.0'
+    testImplementation gradleTestKit()
 }
 
 java {
