--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ test {
 gradlePlugin {
     plugins {
         upgradeWrapper {
-            id = 'com.gradle.upgrade.wrapper'
+            id = 'com.gradle.wrapper-upgrade'
             implementationClass = 'com.gradle.upgrade.wrapper.UpgradeWrapperPlugin'
         }
     }
