Add Gradle Enterprise configuration

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,17 @@
-rootProject.name = 'build-logic'
+plugins {
+    id 'com.gradle.enterprise' version '3.8.1'
+    id 'com.gradle.common-custom-user-data-gradle-plugin' version '1.6.3'
+}
+
+def isCI = System.getenv('GITHUB_ACTIONS') != null
+
+gradleEnterprise {
+    server = 'https://ge.solutions-team.gradle.com'
+    buildScan {
+        capture { taskInputFiles = true }
+        uploadInBackground = !isCI
+        publishAlways()
+    }
+}
+
+rootProject.name = 'wrapper-upgrade-gradle-plugin'
