--- a/.github/workflows/build-verification.yml
+++ b/.github/workflows/build-verification.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup git user
+      # Needed for functionnal tests executing git commands
+        run: |
+          git config --global user.name "bot-githubaction"
+          git config --global user.email "bot-githubaction@gradle.com"
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
