Add Github release capability

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,15 @@
 plugins {
     id 'java-gradle-plugin'
     id 'groovy'
+    id 'maven-publish'
+    id 'signing'
+    id 'com.gradle.plugin-publish' version '0.20.0'
+    id 'com.github.breadmoirai.github-release' version '2.2.12'
 }
+
+group = 'com.gradle'
+version = layout.projectDirectory.file('release/version.txt').asFile.text.trim()
+
 
 repositories {
     mavenCentral()
@@ -33,4 +41,43 @@ gradlePlugin {
             implementationClass = 'org.gradle.upgrade.wrapper.WrapperUpgradePlugin'
         }
     }
+}
+
+signing {
+    // Require publications to be signed on CI. Otherwise, publication will be signed only if keys are provided.
+    required providers.environmentVariable('CI').isPresent()
+
+    useInMemoryPgpKeys(
+        providers.environmentVariable('PGP_SIGNING_KEY').orNull,
+        providers.environmentVariable('PGP_SIGNING_KEY_PASSPHRASE').orNull
+    )
+    sign(configurations.archives)
+}
+
+githubRelease {
+   token = System.getenv('WRAPPER_UPGRADE_GIT_TOKEN') ?: ''
+   owner = 'gradle'
+   repo = 'wrapper-upgrade-gradle-plugin'
+   targetCommitish = 'main'
+   releaseName = gitHubReleaseName()
+   tagName = gitReleaseTag()
+   prerelease = false
+   overwrite = false
+   body = layout.projectDirectory.file('release/changes.md').asFile.text.trim()
+}
+
+tasks.register('createReleaseTag', CreateGitTag) {
+    tagName = gitReleaseTag()
+}
+
+tasks.named("githubRelease") {
+    dependsOn("createReleaseTag")
+}
+
+def gitHubReleaseName() {
+    return version.toString()
+}
+
+def gitReleaseTag() {
+    return "v${version}"
 }
