--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'com.github.breadmoirai.github-release' version '2.2.12'
 }
 
-group = 'com.gradle'
+group = 'org.gradle'
 version = layout.projectDirectory.file('release/version.txt').asFile.text.trim()
 
 
