--- a/.github/workflows/build-verification.yml
+++ b/.github/workflows/build-verification.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: build -i -x signArchives
+          arguments: build -x signArchives -i
