--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,11 @@ gradlePlugin {
     }
 }
 
+tasks.withType(ValidatePlugins).configureEach {
+    failOnWarning = true
+    enableStricterValidation = true
+}
+
 signing {
     // Require publications to be signed on CI. Otherwise, publication will be signed only if keys are provided.
     required providers.environmentVariable('CI').isPresent()
