Add more plugin metadata

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,12 @@ tasks.withType(ValidatePlugins).configureEach {
     enableStricterValidation = true
 }
 
+pluginBundle {
+    website = "https://github.com/gradle/wrapper-upgrade-gradle-plugin/"
+    vcsUrl = "https://github.com/gradle/wrapper-upgrade-gradle-plugin.git"
+    tags = ["gradle", "maven", "wrapper"]
+}
+
 signing {
     // Require publications to be signed on CI. Otherwise, publication will be signed only if keys are provided.
     required providers.environmentVariable('CI').isPresent()
