Rename plugins DSL named domain object

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ test {
 
 gradlePlugin {
     plugins {
-        upgradeWrapper {
+        wrapperUpgrade {
             id = 'org.gradle.wrapper-upgrade'
             displayName = 'Wrapper Upgrade Gradle Plugin'
             description = 'A Gradle plugin that detects and updates Gradle and Maven wrappers to the latest Gradle and Maven version.'
