--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.util.GradleVersion
+
 plugins {
     id 'groovy'
     id 'java-gradle-plugin'
@@ -32,8 +34,8 @@ java {
 
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
-    def testGradleVersion = findProperty('testGradleVersion') ?: GradleVersion.current().version
 
+    def testGradleVersion = findProperty('testGradleVersion') ?: GradleVersion.current().version
     systemProperty 'testContext.gradleVersion', testGradleVersion
     buildScan.value(identityPath.path + "#gradleVersion", testGradleVersion)
 }
