--- a/.github/workflows/build-verification.yml
+++ b/.github/workflows/build-verification.yml
@@ -11,6 +11,8 @@ jobs:
             gradle-version: [ '6.0.1', '6.9.2', '7.0.2', '7.4.1' ]
     env:
       GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
+      GRADLE_ENTERPRISE_CACHE_USERNAME: ${{ secrets.GE_SOLUTIONS_CACHE_USERNAME }}
+      GRADLE_ENTERPRISE_CACHE_PASSWORD: ${{ secrets.GE_SOLUTIONS_CACHE_PASSWORD }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
