--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,21 @@ gradleEnterprise {
     }
 }
 
+buildCache {
+    local {
+        enabled = true
+    }
+
+    remote(HttpBuildCache) {
+        url = 'https://ge.solutions-team.gradle.com/cache/'
+        allowUntrustedServer = false
+        credentials { creds ->
+            creds.username = System.getenv('GRADLE_ENTERPRISE_CACHE_USERNAME')
+            creds.password = System.getenv('GRADLE_ENTERPRISE_CACHE_PASSWORD')
+        }
+        enabled = true
+        push = isCI
+    }
+}
+
 rootProject.name = 'wrapper-upgrade-gradle-plugin'
