Add "Set up Gradle" step to GHActions workflows
Separating the setup of the Gradle build tool from actual build invocation
is more idiomatic to GH Actions in general, and provides a clearer separation
of responsibilities.

--- a/.github/workflows/build-verification.yml
+++ b/.github/workflows/build-verification.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
-      - name: Build with Gradle
+      - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build -x signArchives -i -PtestGradleVersion=${{ matrix.gradle-version }}
+      - name: Build with Gradle
+        run: ./gradlew build -x signArchives -i -PtestGradleVersion=${{ matrix.gradle-version }}
