--- a/build.gradle
+++ b/build.gradle
@@ -106,8 +106,17 @@ tasks.register('createReleaseTag', CreateGitTag) {
     tagName = gitReleaseTag()
 }
 
-tasks.named("githubRelease") {
-    dependsOn("createReleaseTag")
+tasks.named('githubRelease') {
+    dependsOn('createReleaseTag')
+    notCompatibleWithConfigurationCache("$name task does not support configuration caching")
+}
+
+tasks.named('publishPlugins') {
+    notCompatibleWithConfigurationCache("$name task does not support configuration caching")
+}
+
+tasks.withType(Sign).configureEach {
+    notCompatibleWithConfigurationCache("$name task does not support configuration caching")
 }
 
 def gitHubReleaseName() {
