--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,7 @@ githubRelease {
    tagName = gitReleaseTag()
    prerelease = false
    overwrite = false
+   generateReleaseNotes = false
    body = layout.projectDirectory.file('release/changes.md').asFile.text.trim()
 }
 
