Adapt to new plugin-publish plugin

--- a/.github/workflows/build-verification.yml
+++ b/.github/workflows/build-verification.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
       - name: Build with Gradle
-        run: ./gradlew build -x signArchives -i -PtestGradleVersion=${{ matrix.gradle-version }}
+        run: ./gradlew build -x signPluginMavenPublication -i -PtestGradleVersion=${{ matrix.gradle-version }}
