Fix comment in build script (again)

--- a/build.gradle
+++ b/build.gradle
@@ -97,7 +97,7 @@ githubRelease {
 }
 
 def createReleaseTag = tasks.register('createReleaseTag', CreateGitTag) {
-    // Ensure the tag is created if building and publishing the plugin succeeds.
+    // Ensure tag is created only after a successful publishing
     mustRunAfter('publishPlugins')
     tagName = gitReleaseTag()
 }
