--- a/.github/workflows/build-verification.yml
+++ b/.github/workflows/build-verification.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '8'
-          distribution: 'adopt'
+          distribution: 'temurin'
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
       - name: Build with Gradle
