Set version to String
Setting version to Property<String> causes incorrect jar file names and incorrect version in pom files

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ def releaseVersion = releaseVersion()
 def releaseNotes = releaseNotes()
 
 group = 'org.gradle'
-version = releaseVersion
+version = releaseVersion.get()
 description = 'A Gradle plugin that detects and updates Gradle and Maven wrappers to the latest Gradle and Maven version.'
 
 repositories {
