--- a/settings.gradle
+++ b/settings.gradle
@@ -1,18 +1,16 @@
 plugins {
-    id 'com.gradle.enterprise' version '3.17.5'
+    id 'com.gradle.develocity' version '3.17.5'
     id 'com.gradle.common-custom-user-data-gradle-plugin' version '2.0.2'
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
 }
 
 def isCI = System.getenv('GITHUB_ACTIONS') != null
 
-gradleEnterprise {
+develocity {
     server = 'https://ge.solutions-team.gradle.com'
     buildScan {
-        capture { taskInputFiles = true }
         uploadInBackground = !isCI
-        publishAlways()
-        publishIfAuthenticated()
+        publishing.onlyIf { it.authenticated }
         obfuscation {
             ipAddresses { addresses -> addresses.collect { address -> "0.0.0.0"} }
         }
@@ -24,7 +22,7 @@ buildCache {
         enabled = true
     }
 
-    remote(gradleEnterprise.buildCache) {
+    remote(develocity.buildCache) {
         enabled = true
         push = isCI
     }
