--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ tasks.withType(Test).configureEach {
 
     def testGradleVersion = findProperty('testGradleVersion') ?: GradleVersion.current().version
     systemProperty 'testContext.gradleVersion', testGradleVersion
-    buildScan.value(identityPath.path + "#gradleVersion", testGradleVersion)
+    project.develocity.buildScan.value(identityPath.path + "#gradleVersion", testGradleVersion)
 }
 
 tasks.withType(Jar).configureEach {
