--- a/.github/workflows/build-verification.yml
+++ b/.github/workflows/build-verification.yml
@@ -7,8 +7,9 @@ jobs:
     name: Verification
     runs-on: ubuntu-latest
     strategy:
+        fail-fast: false
         matrix:
-            gradle-version: [ '7.6.2', '8.0.2', '8.1.1', '8.2', '8.3' ]
+            gradle-version: [ '7.6.2', '8.0.2', '8.1.1', '8.2', '8.3', '8.14.3', '9.0.0' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
